--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,17 +1,93 @@
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
+    <h1>blackthorn</h1>
+    <p class="lead">Create or join an event</p>
     <img src="assets/images/yeoman.png" alt="I'm Yeoman">
   </div>
+<div class="container">
+  <div class="row">
+    <h2></h2>
+    <div id="custom-search-input">
+      <div class="input-group col-md-12">
+        <input type="text" 
+               class="search-query form-control" 
+               placeholder="Search for events" />
+        <span class="input-group-btn">
+          <button class="btn btn-primary" 
+                  type="button">
+            <span class=" glyphicon glyphicon-search"></span>
+          </button>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+
 </header>
 
+
+
+<!-- <div class="demo-card">
+    <div class="card">
+        <div class="card-header">
+            This is a card header
+        </div>
+        <img class="card-img-top" src="http://placekitten.com/500/200">
+        <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+        </div>
+        <div class="card-block">
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+        </div>
+        <div class="card-block">
+            <a href="#" class="btn btn-primary">Button</a>
+        </div>
+        <div class="card-footer text-muted">
+            This is a card footer
+        </div>
+    </div>
+</div>
+
+
+
 <div class="container">
+  <div class="row">
+    <div class="card">
+      <img class="card-img-top" data-src="..." alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Button</a>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" data-src="..." alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Button</a>
+      </div>
+    </div>
+  </div>
+</div>
+ -->
+
+<!-- <div class="container">
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
-        <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}<button type="button" class="close" ng-click="$ctrl.deleteThing(thing)">&times;</button></a></li>
+        <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}<button type="button" 
+                      class="close" 
+                      ng-click="$ctrl.deleteThing(thing)">&times;</button></a></li>
       </ul>
     </div>
   </div>
@@ -25,4 +101,4 @@
       </span>
     </p>
   </form>
-</div>
+</div> -->
